--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-
+MONGOURI=mongodb+srv://ryanalvord:Luckysandwich7@luckysandwich7.vymsung.mongodb.net/cse341
+GITHUB_CLIENT_SECRET=af044a695434b6d01add13631c57b032ba1eaa2e
+GITHUB_CLIENT_ID=a253e32a3c63041d6d65
+CALLBACK_URL=https://localhost:3000/github/callback
