--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.16.3",
@@ -33,8 +34,10 @@
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "prettier": "^2.5.1",
+    "supertest": "^6.3.3",
     "swagger-autogen": "^2.23.1"
   }
 }
