--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "1.0.0",
   "description": "Simple Server to display made up contacts",
   "main": "server.js",
+  "jest": {
+    "preset": "@shelf/jest-mongodb"
+  },
   "scripts": {
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --collectCoverage",
+    "test": "jest --watch --coverage",
+    "test1": "node --experimental-vm-modules node_modules/jest/bin/jest.js --collectCoverage",
     "start": "node server.js",
     "devStart": "nodemon server.js",
     "lint": "eslint .",
@@ -31,6 +35,7 @@
     "validatorjs": "^3.22.1"
   },
   "devDependencies": {
+    "@shelf/jest-mongodb": "^4.1.7",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
