--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^7.1.0",
     "passport": "^0.6.0",
     "passport-github2": "^0.1.12",
+    "passport-google-oauth2": "^0.2.0",
     "swagger-ui-express": "^4.6.2",
     "validatorjs": "^3.22.1"
   },
