--- a/.env
+++ b/.env
@@ -5,3 +5,9 @@ GITHUB_CLIENT_SECRET=af044a695434b6d01add13631c57b032ba1eaa2e
 GITHUB_CLIENT_ID=a253e32a3c63041d6d65
 
 CALLBACK_URL=https://cte341-final-project.onrender.com//github/callback
+
+GOOGLE_CLIENT_ID=350043802213-dhhusd5frc5tbu8bh4ekofppdutbk85d.apps.googleusercontent.com
+
+GOOGLE_CLIENT_SECRET=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
+
+CALLBACK_URL=http://localhost:3000/auth/google/callback
