--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "dotenv": "^16.0.0",
     "express": "^4.16.3",
     "express-validator": "^7.0.1",
+    "google-auth-library": "^8.8.0",
     "google-oauth2": "^0.1.0",
+    "googleapis": "^118.0.0",
+    "googleapis-common": "^6.0.4",
     "joi": "^17.9.2",
     "mongodb": "^4.16.0",
     "mongoose": "^7.1.0",
