--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Ryan Alvord, Shelya Norton, Peace Arikpo, Millie Swain",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/local-auth": "^2.1.0",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -22,6 +23,7 @@
     "express": "^4.16.3",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
+    "googleapis": "^105.0.0",
     "joi": "^17.9.2",
     "mongodb": "^4.16.0",
     "mongoose": "^7.1.0",
