--- a/.env
+++ b/.env
@@ -11,5 +11,6 @@ MONGOURI=mongodb+srv://ryanalvord:Luckysandwich7@luckysandwich7.vymsung.mongodb.
 # Google Token
 GOOGLE_CLIENT_ID=703602463557-jo5hq0q322lf8echs2elsnveaj0rd6g9.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-GOOGLE_CALLBACK_URL=http://localhost:3000
+GOOGLE_CALLBACK_URL=https://grocerystoregmailauth.onrender.com
+# GOOGLE_CALLBACK_URL=http://localhost:3000
 
