--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
 # MongoDB URL
 MONGOURI=mongodb+srv://ryanalvord:Luckysandwich7@luckysandwich7.vymsung.mongodb.net/grocery_store
 
-# # GitHub Token
-GITHUB_CLIENT_SECRET=af044a695434b6d01add13631c57b032ba1eaa2e
-GITHUB_CLIENT_ID=a253e32a3c63041d6d65
-CALLBACK_URL=https://cte341-final-project.onrender.com//github/callback
+# # # GitHub Token
+# GITHUB_CLIENT_SECRET=af044a695434b6d01add13631c57b032ba1eaa2e
+# GITHUB_CLIENT_ID=a253e32a3c63041d6d65
+# CALLBACK_URL=https://cte341-final-project.onrender.com//github/callback
 
 
 
 # Google Token
 GOOGLE_CLIENT_ID=703602463557-jo5hq0q322lf8echs2elsnveaj0rd6g9.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-GOOGLE_CALLBACK_URL=http://localhost:3000
+CALLBACK_URL=http://localhost:3000
 
